# dlthub-playground

./: .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.dlt/: config.toml
jira/: __init__.py
pipelines/databricks/: jira_ingestion.py  python_source_ingestion.py  rest_github_ingestion.py  rest_jira_ingestion.py  rest_pokemon_ingestion.py
sources/jira/: __init__.py
